layout bug fix issues #244

--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -39,7 +39,7 @@ a, a:hover, a:focus, button:hover, button:focus {
 
 h1,
 h2,
-h3,
+/*h3,*/
 h4,
 h5,
 h6 {
